# mcp-inspector

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json  quickstart.sh
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  types.ts
frontend/src/assets/: styles.css
frontend/src/components/: HeaderBar.vue  LogPanel.vue  PromptPanel.vue  ResourcePanel.vue  ToolList.vue
frontend/src/services/: mcpApi.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  session.rs
