[package]
name = "mcp_inspector_tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri backend for the MCP Inspector"
authors = ["lujin <lujin@example.com>"]

[lib]
name = "mcp_inspector_backend"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
rmcp = { version = "0.8.5", features = ["client", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sse-stream = "0.2"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
